--- a/src/main/resources/com/github/addshore/facebook/data/image/exif/dataEntry.fxml
+++ b/src/main/resources/com/github/addshore/facebook/data/image/exif/dataEntry.fxml
@@ -5,157 +5,100 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-<GridPane xmlns:fx="http://javafx.com/fxml/1" alignment="center" hgap="10" style="-fx-background-color: white;"
-          vgap="10" xmlns="http://javafx.com/javafx/8.0.91"
-          fx:controller="com.github.addshore.facebook.data.image.exif.Controller">
-    <columnConstraints>
-        <ColumnConstraints/>
-        <ColumnConstraints/>
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints minHeight="10.0" prefHeight="30.0"/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-        <RowConstraints/>
-    </rowConstraints>
+
+<VBox xmlns:fx="http://javafx.com/fxml/1" alignment="center" spacing="10" style="-fx-background-color: white;"
+      xmlns="http://javafx.com/javafx/8.0.91"
+      fx:controller="com.github.addshore.facebook.data.image.exif.Controller">
+    
     <padding>
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
-    <Label text="Path to extracted facebook data download" GridPane.columnIndex="1" GridPane.rowIndex="1"
-           GridPane.valignment="CENTER"/>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <JFXTextField promptText="Default prompt text" style="-fx-background-color: #d8dfea;"
-                      GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS"
-                      GridPane.valignment="CENTER">
+    
+    <!-- Facebook data path section -->
+    <Label text="Path to extracted facebook data download" style="-fx-font-weight: bold;"/>
+    <HBox spacing="10" alignment="CENTER_LEFT">
+        <JFXTextField fx:id="dirInput" promptText="Example: C:\Users\example\downloads\extracted-facebook-export" 
+                      style="-fx-background-color: #d8dfea;" HBox.hgrow="ALWAYS">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
         </JFXTextField>
-        <JFXButton minWidth="50.0" mnemonicParsing="false" ripplerFill="#4059a9"
-                   style="-fx-background-color: #d8dfea;" text="Browse" textAlignment="CENTER"
-                   GridPane.columnIndex="1" GridPane.valignment="CENTER">
+        <JFXButton fx:id="dirInputBrowse" text="Browse" style="-fx-background-color: #d8dfea;" 
+                   ripplerFill="#4059a9">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <GridPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </GridPane.margin>
         </JFXButton>
-    </GridPane>
-    <Label text="Path to exiftool program" GridPane.columnIndex="1" GridPane.rowIndex="3"
-           GridPane.valignment="CENTER"/>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="4">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <JFXTextField promptText="Default prompt text" style="-fx-background-color: #d8dfea;"
-                      GridPane.columnIndex="0" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS"
-                      GridPane.valignment="CENTER">
+    </HBox>
+    
+    <!-- ExifTool path section -->
+    <Label fx:id="toolLabel" text="Path to exiftool program" style="-fx-font-weight: bold;"/>
+    <HBox spacing="10" alignment="CENTER_LEFT">
+        <JFXTextField fx:id="toolInput" promptText="Example: C:\Users\example\downloads\exiftool.exe" 
+                      style="-fx-background-color: #d8dfea;" HBox.hgrow="ALWAYS">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
         </JFXTextField>
-        <JFXButton minWidth="50.0" mnemonicParsing="false" ripplerFill="#4059a9"
-                   style="-fx-background-color: #d8dfea;" text="Browse" textAlignment="CENTER"
-                   GridPane.columnIndex="1" GridPane.valignment="CENTER">
+        <JFXButton fx:id="toolInputBrowse" text="Browse" style="-fx-background-color: #d8dfea;" 
+                   ripplerFill="#4059a9">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <GridPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </GridPane.margin>
         </JFXButton>
-    </GridPane>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="7">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints/>
-            <RowConstraints vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <Label text="Version: XXX" GridPane.rowIndex="1" GridPane.valignment="TOP">
-            <padding>
-                <Insets left="5.0"/>
-            </padding>
-        </Label>
-        <Hyperlink text="by Addshore" GridPane.columnIndex="1" GridPane.rowIndex="1" GridPane.valignment="TOP"/>
-        <Hyperlink text="(buy me a coffee)" GridPane.columnIndex="2" GridPane.rowIndex="1"
-                   GridPane.valignment="TOP"/>
-        <Hyperlink prefHeight="6.0" prefWidth="127.0" text="exiftool by Phil Harvey" GridPane.columnIndex="3"
-                   GridPane.rowIndex="1" GridPane.valignment="TOP"/>
-    </GridPane>
-    <Label layoutX="20.0" layoutY="122.0" text="Note: This program currently only works for JSON downloads"
-           underline="true" GridPane.columnIndex="1" GridPane.valignment="CENTER">
-        <font>
-            <Font name="System Bold" size="12.0"/>
-        </font>
-    </Label>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="6">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-            <ColumnConstraints hgrow="SOMETIMES"/>
-            <ColumnConstraints hgrow="SOMETIMES" percentWidth="0.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <JFXButton defaultButton="true" minWidth="50.0" mnemonicParsing="false" ripplerFill="#4059a9"
-                   style="-fx-background-color: #8c9fc0;" text="Run" textAlignment="CENTER"
-                   GridPane.valignment="CENTER">
+    </HBox>
+    
+    <!-- Options section -->
+    <VBox spacing="5" style="-fx-border-color: #cccccc; -fx-border-width: 1; -fx-padding: 10;">
+        <Label text="Options" style="-fx-font-weight: bold; -fx-font-size: 14px;"/>
+        
+        <!-- File processing mode -->
+        <Label text="File processing mode:" style="-fx-font-weight: bold;"/>
+        <VBox spacing="5" style="-fx-padding: 5;">
+            <RadioButton fx:id="overwriteOriginalsRadio" text="Overwrite originals" selected="true"/>
+            <RadioButton fx:id="copyToProcessedRadio" text="Copy to Processed folder"/>
+        </VBox>
+        
+        <Separator/>
+        
+        <!-- Processing options -->
+        <CheckBox fx:id="processPostsCheckbox" text="Process posts (albums and photos)" selected="true"/>
+        <CheckBox fx:id="processMessagesCheckbox" text="Process messages (photos and videos from conversations)" selected="true"/>
+        <CheckBox fx:id="processFilesCheckbox" text="Process files (all files with creation_timestamp)" selected="false"/>
+    </VBox>
+    
+    <!-- Action buttons -->
+    <HBox spacing="15" alignment="CENTER">
+        <JFXButton fx:id="runButton" text="Run" defaultButton="true" 
+                   style="-fx-background-color: #8c9fc0;" ripplerFill="#4059a9">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <GridPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </GridPane.margin>
         </JFXButton>
-        <JFXButton layoutX="10.0" layoutY="13.0" minWidth="60.0" mnemonicParsing="false" ripplerFill="#4059a9"
-                   style="-fx-background-color: #d8dfea;" text="Dry Run" textAlignment="CENTER"
-                   GridPane.columnIndex="1">
+        <JFXButton fx:id="dryRunButton" text="Dry Run" 
+                   style="-fx-background-color: #d8dfea;" ripplerFill="#4059a9">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <GridPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </GridPane.margin>
         </JFXButton>
-        <JFXCheckBox checkedColor="#6d84b4" mnemonicParsing="false" prefHeight="28.0" prefWidth="434.0"
-                     text="Debug (extra output for debugging)" GridPane.columnIndex="2">
+        <JFXCheckBox fx:id="debugCheckbox" text="Debug (extra output for debugging)" 
+                     checkedColor="#6d84b4">
             <padding>
                 <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
             </padding>
-            <GridPane.margin>
-                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-            </GridPane.margin>
         </JFXCheckBox>
-    </GridPane>
-    <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-        </columnConstraints>
-        <rowConstraints>
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-        </rowConstraints>
-        <CheckBox mnemonicParsing="false"
-                  text="Overwrite files (instead of preserving them by adding _original to names)"/>
-    </GridPane>
-</GridPane>
+    </HBox>
+    
+    <!-- Note -->
+    <Label text="Note: This program currently only works for JSON downloads" 
+           underline="true" style="-fx-font-weight: bold; -fx-font-size: 12px;"/>
+    
+    <!-- Footer links -->
+    <HBox spacing="20" alignment="CENTER">
+        <Label fx:id="versionLabel" text="Version: XXX"/>
+        <Hyperlink fx:id="hyperLinkAddshore" text="by Addshore"/>
+        <Hyperlink fx:id="hyperLinkCoffee" text="(buy me a coffee)"/>
+        <Hyperlink fx:id="hyperLinkExif" text="exiftool by Phil Harvey"/>
+    </HBox>
+    
+</VBox>
